fixed title formatting on mobile

--- a/themes/hugo-theme-console/static/hugo-theme-console/css/console.css
+++ b/themes/hugo-theme-console/static/hugo-theme-console/css/console.css
@@ -225,11 +225,6 @@ figure {
 }
 
 @media only screen and (max-width: 850px) {
-    .site-name {
-        width: 2ch;
-        overflow: hidden;
-        display: inline-block;
-    }
 
     .terminal-nav {
         align-items: flex-start;
